# NBA

./: .dockerignore  ARCHITECTURE.md  Dockerfile  PROJECT_GUIDE.md  README.md  RULEBOOK.md  backup_check_nba_pool.db  docker-compose.yml  nba_pool.db  pyproject.toml  real_recovery_check.db  repro2_nba_pool.db  repro3_nba_pool.db  repro_nba_pool.db  scenario_nba_pool.db  scenario_nba_pool2.db  smoke_nba_pool.db  snapshot_check_nba_pool.db  snapshot_export_check.db  snapshot_reset_apply.db  snapshot_reset_sim.db  snapshot_ui_check.db  snapshot_ui_check2.db  test_nba_pool.db
app/: __init__.py  auth.py  config.py  db.py  main.py  models.py
app/data/: __init__.py  nba_catalog.py
app/domain/: __init__.py  scoring.py
app/services/: automation.py  provider.py  recovery.py
app/templates/: base.html  index.html  invite.html  matchup.html  player.html  pool.html  pool_gate.html  side_bet_table.html
nba_playoff_pool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pool-backup-85e09629-8283-4ada-bdce-b4bc06f777e4 (2)/: fallback_workbook.xlsx  snapshot.json
pool-backup-85e09629-8283-4ada-bdce-b4bc06f777e4 (2)/csv/: betting_windows.csv  event_logs.csv  invite_links.csv  leaderboard.csv  memberships.csv  payment_ledger_entries.csv  pick_submissions.csv  result_snapshots.csv  users.csv
scripts/: seed_demo_run.py  smoke_new_features.py  start.sh  thesportsdb_nba_probe.py
tests/: test_app.py  test_db.py  test_scoring.py  test_thesportsdb_probe.py
