[project]
name = "nba-playoff-pool"
version = "0.1.0"
description = "Private NBA playoff pool web app with deterministic scoring and recovery exports."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.35",
  "psycopg[binary]>=3.2.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.12",
  "itsdangerous>=2.2.0",
  "httpx>=0.27.2",
  "openpyxl>=3.1.5",
  "apscheduler>=3.10.4",
  "pydantic-settings>=2.5.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
